--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ authors = [
 description = "Library of common utility functions for Python"
 readme = "README.md"
 requires-python = ">=3.7"
+dependencies = ["colorlog",
+                "mysqlclient==2.1.1",
+                "psycopg2",
+                "PyJWT==2.6.0",
+                "pymongo",
+                "requests"
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
