--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = ["colorlog",
                 "mysqlclient==2.1.1",
                 "psycopg2",
                 "PyJWT==2.6.0",
-                "pymongo",
+                "pymongo==4.4.0",
                 "requests"
 ]
 classifiers = [
