--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = ["colorlog",
                 "mysqlclient==2.1.1",
-                "psycopg2",
+                "psycopg2-binary",
                 "PyJWT==2.6.0",
                 "pymongo==4.4.0",
                 "requests"
